WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91374
[chromium] Only apply page scale delta to root scroll layer
https://bugs.webkit.org/show_bug.cgi?id=91374
Summary
[chromium] Only apply page scale delta to root scroll layer
Sami Kyöstilä
Reported
2012-07-16 04:24:17 PDT
Only apply page scale delta to root scroll layer
Attachments
Patch
(6.11 KB, patch)
2012-07-16 04:36 PDT
,
Sami Kyöstilä
no flags
Details
Formatted Diff
Diff
Patch
(6.71 KB, patch)
2012-07-16 09:50 PDT
,
Sami Kyöstilä
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sami Kyöstilä
Comment 1
2012-07-16 04:36:46 PDT
Created
attachment 152508
[details]
Patch
Adrienne Walker
Comment 2
2012-07-16 09:31:10 PDT
Comment on
attachment 152508
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=152508&action=review
> Source/WebCore/platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:796 > + if (m_rootScrollLayerImpl) > + m_rootScrollLayerImpl->setPageScaleDelta(m_pageScaleDelta);
If page delta is applied recursively through the tree, then I wonder why you're applying it to the scroll layer and not to the root itself. Is it because you don't want to scale the root scrollbars?
> Source/WebKit/chromium/tests/CCLayerTreeHostImplTest.cpp:1015 > + // The page scale delta should only be applied to the scrollable root layer. > + EXPECT_EQ(root->pageScaleDelta(), newPageScale); > + EXPECT_EQ(child->pageScaleDelta(), defaultPageScale); > + EXPECT_EQ(grandChild->pageScaleDelta(), defaultPageScale);
If the real bug is that the resulting draw transforms have double scale in them, can you make that assertion here as well?
Sami Kyöstilä
Comment 3
2012-07-16 09:35:14 PDT
(In reply to
comment #2
)
> If page delta is applied recursively through the tree, then I wonder why you're applying it to the scroll layer and not to the root itself. Is it because you don't want to scale the root scrollbars?
That's right. The overlay controls should not be scaled when pinch zooming.
> > Source/WebKit/chromium/tests/CCLayerTreeHostImplTest.cpp:1015 > > + // The page scale delta should only be applied to the scrollable root layer. > > + EXPECT_EQ(root->pageScaleDelta(), newPageScale); > > + EXPECT_EQ(child->pageScaleDelta(), defaultPageScale); > > + EXPECT_EQ(grandChild->pageScaleDelta(), defaultPageScale); > > If the real bug is that the resulting draw transforms have double scale in them, can you make that assertion here as well?
Good idea. I don't think we're checking for that anywhere at the moment.
Sami Kyöstilä
Comment 4
2012-07-16 09:35:56 PDT
(In reply to
comment #3
)
> That's right. The overlay controls should not be scaled when pinch zooming.
Sorry, I meant *overflow* controls.
Sami Kyöstilä
Comment 5
2012-07-16 09:50:47 PDT
Created
attachment 152552
[details]
Patch - Check for correct draw transforms on all layers.
Alexandre Elias
Comment 6
2012-07-16 10:10:57 PDT
Looks good to me, thanks.
Adrienne Walker
Comment 7
2012-07-16 11:56:35 PDT
Comment on
attachment 152552
[details]
Patch R=me. Thanks for the extra tests.
WebKit Review Bot
Comment 8
2012-07-16 12:06:13 PDT
Comment on
attachment 152552
[details]
Patch Clearing flags on attachment: 152552 Committed
r122746
: <
http://trac.webkit.org/changeset/122746
>
WebKit Review Bot
Comment 9
2012-07-16 12:06:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug